fix: n+1 on courseservice